# webrender

./: .gitignore  .gitpod.yml  .taskcluster.yml  .travis.yml  Cargo.toml  FORK.md  README.md  appveyor.yml  build.rs  circle.yml  servo-tidy.toml
direct-composition/: Cargo.toml  build.rs
direct-composition/src/: com.rs  egl.rs  lib.rs  main.rs  main_windows.rs
glsl-to-cxx/: Cargo.toml
glsl-to-cxx/src/: lib.rs  main.rs
replay/: Cargo.toml  README.md
replay/src/: main.rs
sample/: Cargo.toml
sample/src/: main.rs
swgl/: Cargo.toml  build.rs
swgl/src/: lib.rs  swgl_fns.rs
webrender/: Cargo.toml  build.rs  combined_shaders.rs
webrender/doc/: CLIPPING_AND_POSITIONING.md  blob.md
webrender/examples/: alpha_perf.rs  animation.rs  basic.rs  blob.rs  boilerplate.rs  document.rs  frame_output.rs  geometry.rs  iframe.rs  image_resize.rs  multiwindow.rs  nested_display_list.rs  scrolling.rs  texture_cache_stress.rs  yuv.rs
webrender/examples/common/: boilerplate.rs
webrender/res/: base.glsl  blend.fs.glsl  blur.fs.glsl  brush.glsl  brush_blend.glsl  brush_debug_overdraw.glsl  brush_image.glsl  brush_line.glsl  brush_linear_gradient.glsl  brush_mask.glsl  brush_mask_corner.glsl  brush_mask_rounded_rect.glsl  brush_mix_blend.glsl  brush_picture.glsl  brush_radial_gradient.glsl  brush_solid.glsl  brush_yuv_image.glsl  clip_shared.glsl  cs_blur.fs.glsl  cs_blur.glsl  cs_blur.vs.glsl  cs_border_segment.glsl  cs_border_solid.glsl  cs_box_shadow.fs.glsl  cs_box_shadow.glsl  cs_box_shadow.vs.glsl  cs_clip.fs.glsl  cs_clip.glsl  cs_clip.vs.glsl  cs_clip_border.fs.glsl  cs_clip_border.glsl  cs_clip_border.vs.glsl  cs_clip_box_shadow.glsl  cs_clip_clear.vs.glsl  cs_clip_image.fs.glsl  cs_clip_image.glsl  cs_clip_image.vs.glsl  cs_clip_line.glsl  cs_clip_rectangle.fs.glsl  cs_clip_rectangle.glsl  (+88 more)
webrender/src/: batch.rs  border.rs  box_shadow.rs  capture.rs  clip.rs  clip_node.rs  clip_scroll_node.rs  clip_scroll_tree.rs  clip_stack.rs  composite.rs  debug_colors.rs  debug_font_data.rs  debug_render.rs  debug_server.rs  device.rs  display_list_flattener.rs  ellipse.rs  filterdata.rs  font_renderer.rs  frame.rs  frame_builder.rs  freelist.rs  gamma_lut.rs  glyph_cache.rs  glyph_rasterizer.rs  glyph_renderer.rs  gpu_cache.rs  gpu_glyph_renderer.rs  gpu_store.rs  gpu_types.rs  hit_test.rs  image.rs  index_vec.rs  intern.rs  internal_types.rs  layer.rs  lib.rs  mask_cache.rs  picture.rs  prim_store.rs  (+34 more)
webrender/src/device/: gl.rs  mod.rs  query_gl.rs
webrender/src/glyph_rasterizer/: glyph_rasterizer_ext_no_pathfinder.rs  mod.rs  no_pathfinder.rs  pathfinder.rs
webrender/src/prim_store/: backdrop.rs  borders.rs  gradient.rs  image.rs  interned.rs  line_dec.rs  mod.rs  picture.rs  text_run.rs
webrender/src/renderer/: gpu_cache.rs  mod.rs  shade.rs  upload.rs
webrender/tests/: angle_shader_validation.rs  bug_143.html
webrender_api/: Cargo.toml
webrender_api/src/: api.rs  channel.rs  channel_ipc.rs  channel_mpsc.rs  color.rs  display_item.rs  display_list.rs  font.rs  geometry.rs  gradient_builder.rs  image.rs  lib.rs  units.rs  webgl.rs
webrender_build/: Cargo.toml
webrender_build/src/: shader.rs
webrender_traits/: .gitignore  Cargo.toml  build.rs
webrender_traits/src/: api.rs  channel.rs  channel_ipc.rs  channel_mpsc.rs  color.rs  display_item.rs  display_list.rs  font.rs  image.rs  lib.rs  premultiply.rs  stacking_context.rs  types.rs  units.rs  webgl.rs
wr_malloc_size_of/: Cargo.toml  lib.rs
wrench/: .gitignore  Cargo.toml  README.md  build.rs  headless.py  nested-new.yaml  reftest-debugger.py  run_tests.py  simple.yaml  test.sh
wrench/benchmarks/: aligned-gradient.yaml  benchmarks.list  box-shadow-large.yaml  gradients.yaml  large-blur-image.yaml  large-clip-rect.yaml  radial-gradient.yaml  small-blur-radius.yaml  transforms-simple.yaml  unaligned-gradient.yaml
wrench/reftests/: aligned-layer-clip-rect.yaml  nested-mask-ref.yaml  nested-mask.yaml  reftest.list
wrench/reftests/aa/: reftest.list  rotate-y.yaml  rounded-rects.yaml
wrench/reftests/backface/: backface-both-sides.yaml  backface-leaf.yaml  backface-picture.yaml  backface-sc.yaml  reftest.list
wrench/reftests/blend/: canvas.yaml  darken-ref.yaml  darken.yaml  difference-ref.yaml  difference.yaml  isolated-2-ref.yaml  isolated-2.yaml  isolated-premultiplied.yaml  isolated-ref.yaml  isolated-with-filter.yaml  isolated.yaml  large.yaml  lighten-ref.yaml  lighten.yaml  multiply-2-ref.yaml  multiply-2.yaml  multiply-ref.yaml  multiply.yaml  reftest.list  repeated-difference.yaml  transparent-composite-1.yaml  transparent-composite-2.yaml
wrench/reftests/border/: border-double-simple-ref.yaml  border-double-simple.yaml  border-gradient-simple-ref.yaml  border-gradient-simple.yaml  border-groove-simple-ref.yaml  border-groove-simple.yaml  border-image-crash.yaml  border-image-fill.yaml  border-invisible.yaml  border-radial-gradient-simple-ref.yaml  border-radial-gradient-simple.yaml  border-ridge-simple-ref.yaml  border-ridge-simple.yaml  border-suite-2.yaml  border-suite.yaml  degenerate-curve.yaml  dotted-corner-small-radius.yaml  reftest.list
wrench/reftests/boxshadow/: box-border-radius-ref.yaml  box-border-radius.yaml  box-shadow-huge-radius.yaml  inset-border-radius-ref.yaml  inset-simple-ref.yaml  inset-simple.yaml  inset-spread-ref.yaml  inset-spread.yaml  reftest.list
wrench/reftests/clip/: clip-3d-transform.yaml  clip-45-degree-rotation.yaml  custom-clip-chain-node-ancestors.yaml  custom-clip-chains-ref.yaml  reftest.list  (+4 more)
wrench/res/: composite.yaml  glyphs.yaml  gradient.yaml  multi.yaml  rect.yaml  rotate.yaml  test.yaml
wrench/script/: benchmark_server.py  gen-many-images.py  headless.py  reftest-analyzer.xhtml  reftest-debugger.py
wrench/src/: angle.rs  args.yaml  binary_frame_reader.rs  blob.rs  cgfont_to_data.rs  egl.rs  json_frame_writer.rs  main.rs  mask.yaml  parse_function.rs  perf.rs  png.rs  premultiply.rs  rawtest.rs  reftest.list  reftest.rs  ron_frame_writer.rs  scene.rs  test_shaders.rs  wrench.rs  yaml_frame_reader.rs  yaml_frame_writer.rs  yaml_helper.rs
(+379 files in other folders)
