[package]
name = "replay"
version = "0.1.0"
authors = ["lana <alanamramjit@gmail.com>"]

[dependencies.webrender_traits]
git = "http://github.com/servo/webrender_traits"

[dependencies.webrender]
git = "http://github.com/servo/webrender"

[dependencies]
bincode = "0.5.9"
byteorder = "*"
euclid = "0.7.1"
gleam = "*"
glutin = "*"
