[package]
name = "wr-replay"
version = "0.1.0"
authors = ["lana <alanamramjit@gmail.com>"]

[dependencies.webrender]
git = "http://github.com/servo/webrender"

[dependencies.webrender_traits]
git = "http://github.com/servo/webrender"

[dependencies]
bincode = "0.6"
byteorder = "*"
euclid = "0.10"
gleam = "*"
glutin = "*"
