[package]
name = "wr-sample"
version = "0.1.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]

[dependencies.webrender]
git = "https://github.com/servo/webrender"

[dependencies.webrender_traits]
git = "https://github.com/servo/webrender"

[dependencies]
glutin = "*"
gleam = "*"
euclid = "*"
app_units = "*"
