[package]
name = "wr_sample"
version = "0.2.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"

[dependencies.webrender]
path = "../webrender"

[dependencies.webrender_traits]
path = "../webrender_traits"
default_features = false

[features]
profiler = [ "webrender/profiler" ]

[dependencies]
app_units = "0.4"
euclid = "0.11"
gleam = "0.4"
servo-glutin = "0.10.1"
