[package]
name = "zng-swgl"
version = "0.1.0"
license = "MPL-2.0"
authors = ["The Mozilla Project Developers"]
build = "build.rs"
description = "Software OpenGL implementation for WebRender."

include = ["**"]

[build-dependencies]
cc = "1.0.46"
glsl-to-cxx = { path = "../glsl-to-cxx", version = "0.1.0", package = "zng-glsl-to-cxx" }
webrender-build = { path = "../webrender_build", version = "0.0.2", package = "zng-webrender-build" }

[dependencies]
gleam = "0.15"
