[package]
name = "zng-webrender"
version = "0.62.2"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/zng-ui/zng-webrender"
description = "A GPU accelerated 2D renderer for web content"
build = "build.rs"
edition = "2018"
readme = "../FORK.md"

[features]
default = ["static_freetype"]
profiler = ["tracy-rs/enable_profiler"]
capture = ["api/serialize", "dep:ron", "dep:serde", "smallvec/serde", "etagere/serialization", "glyph_rasterizer/capture"]
replay = ["api/deserialize", "dep:ron", "dep:serde", "smallvec/serde", "etagere/serialization", "glyph_rasterizer/replay"]
display_list_stats = ["api/display_list_stats"]
serialize_program = ["dep:serde", "webrender_build/serialize_program"]
dynamic_freetype = ["glyph_rasterizer/dynamic_freetype"]
static_freetype = ["glyph_rasterizer/static_freetype"]
leak_checks = []
sw_compositor = ["dep:swgl"]

[build-dependencies]
build-parallel = "0.1.2"
glslopt = "0.1.10"
webrender_build = { version = "0.0.2", path = "../webrender_build", package = "zng-webrender-build" }

[dependencies]
bincode = "1.0"
bitflags = { version = "2", features = ["serde"] }
byteorder = "1.0"
euclid = { version = "0.22.0", features = ["serde"] }
fxhash = "0.2.1"
gleam = "0.15.0"
lazy_static = "1.4"
log = "0.4"
malloc_size_of_derive = "0.1"
num-traits = "0.2"
plane-split = "0.18"
png = { optional = true, version = "0.16" }
rayon = "1.10"
ron = { optional = true, version = "0.8" }
serde = { optional = true, version = "1.0", features = ["serde_derive"] }
smallvec = "1.13"
api = { version = "0.62.1", path = "../webrender_api", package = "zng-webrender-api" }
webrender_build = { version = "0.0.2", path = "../webrender_build", package = "zng-webrender-build" }
malloc_size_of = { version = "0.0.3", path = "../wr_malloc_size_of", package = "zng-wr-malloc-size-of" }
glyph_rasterizer = { version = "0.1.1", path = "../wr_glyph_rasterizer", package = "zng-wr-glyph-rasterizer", default-features = false }
svg_fmt = "0.4"
tracy-rs = "0.1.2"
derive_more = { version = "0.99", default-features = false, features = ["add_assign"] }
etagere = "0.2.6"
swgl = { path = "../swgl", optional = true, version = "0.1.2", package = "zng-swgl" }
topological-sort = "0.1"
peek-poke = { version = "0.3", path = "../peek-poke", package = "zng-peek-poke" }

[dev-dependencies]
mozangle = "0.3.3"
rand = "0.4"
