[package]
name = "webrender_api"
version = "0.57.2"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
description = "Public API for WebRender"

[features]
nightly = ["euclid/unstable", "serde/unstable"]
ipc = ["ipc-channel"]
serialize = ["serde", "serde_derive", "serde_bytes", "euclid/serde"]
deserialize = ["serde", "serde_derive", "serde_bytes", "euclid/serde"]

[dependencies]
app_units = "0.7"
bincode = "1.0"
bitflags = "1.0"
byteorder = "1.2.1"
ipc-channel = {version = "0.11.0", optional = true}
euclid = { version = "0.19", default-features = false }
serde = { version = "=1.0.66", features = ["rc"], optional = true }
serde_derive = { version = "=1.0.66", features = ["deserialize_in_place"], optional = true  }
serde_bytes = { version = "0.10", optional = true }
time = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6"
core-graphics = "0.16"

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.4.1"
