[package]
name = "zng-webrender-api"
version = "0.64.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/zng-ui/zng-webrender"
description = "Public API for WebRender"
edition = "2018"
readme = "../FORK.md"

[features]
nightly = ["euclid/unstable", "serde/unstable"]
serialize = []
deserialize = []
display_list_stats = []

[dependencies]
app_units = "0.7.3"
bitflags = { version = "2", features = ["serde"] }
byteorder = "1.2.1"
euclid = { version = "0.22.6", features = ["serde"] }
malloc_size_of_derive = "0.1"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_bytes = "0.11"
malloc_size_of = { version = "0.0.3", path = "../wr_malloc_size_of", package = "zng-wr-malloc-size-of" }
peek-poke = { version = "0.3.2", path = "../peek-poke", package = "zng-peek-poke", features = ["extras"] }
crossbeam-channel = "0.5"
