[package]
name = "webrender_traits"
version = "0.5.1"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
build = "build.rs"

[features]
default = ["serde_codegen"]
nightly = ["euclid/unstable", "serde/unstable"]

[dependencies]
app_units = "0.3.0"
byteorder = "0.5"
euclid = "0.10"
gleam = "0.2.22"
heapsize = "0.3.6"
offscreen_gl_context = {version = "0.4.0", features = ["serde_serialization"]}
serde = "0.8"
serde_macros = {version = "0.8", optional = true}
ipc-channel = "0.5.0"

[target.x86_64-apple-darwin.dependencies]
core-graphics = "0.4"

[build-dependencies]
serde_codegen = {version = "0.8", optional = true}
