[package]
name = "wrench"
version = "0.2.0"
authors = ["Vladimir Vukicevic <vladimir@pobox.com>"]
build = "build.rs"
license = "MPL-2.0"

[dependencies]
base64 = "0.3"
bincode = "1.0.0-alpha2"
byteorder = "1.0"
euclid = "0.11"
gleam = "0.2"
glutin = "0.7"
app_units = "0.4"
image = "0.12"
clap = { version = "2", features = ["yaml"] }
lazy_static = "0.2"
yaml-rust = { git = "https://github.com/vvuk/yaml-rust", features = ["preserve_order"] }
serde_json = "0.9"
time = "0.1"
crossbeam = "0.2"
osmesa-sys = { version = "0.1.2", optional = true }
osmesa-src = { git = "https://github.com/servo/osmesa-src", optional = true }

[features]
headless = [ "osmesa-sys", "osmesa-src" ]

[dependencies.webrender]
path = "../webrender"

[dependencies.webrender_traits]
path = "../webrender_traits"
default_features = false

[target.'cfg(target_os = "windows")'.dependencies]
servo-dwrote = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
font-loader = "0.1.4"
