[package]
name = "wrench"
version = "0.2.3"
authors = ["Vladimir Vukicevic <vladimir@pobox.com>"]
build = "build.rs"
license = "MPL-2.0"

[dependencies]
base64 = "0.3"
bincode = "0.9"
byteorder = "1.0"
env_logger = { version = "0.4", optional = true }
euclid = "0.15"
gleam = "0.4"
servo-glutin = "0.12"
app_units = "0.5.6"
image = "0.14"
clap = { version = "2", features = ["yaml"] }
lazy_static = "0.2"
yaml-rust = { git = "https://github.com/vvuk/yaml-rust", features = ["preserve_order"] }
serde_json = "1.0"
ron = "0.1.3"
time = "0.1"
crossbeam = "0.2"
osmesa-sys = { version = "0.1.2", optional = true }
osmesa-src = { git = "https://github.com/servo/osmesa-src", optional = true }
webrender = {path = "../webrender"}
serde = {version = "1.0", features = ["derive"] }

[features]
headless = [ "osmesa-sys", "osmesa-src" ]
logging = [ "env_logger" ]
debugger = [ "webrender/debugger"]
query = [ "webrender/query" ]

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.4"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
font-loader = "0.4"
